[HW-18] Renamed tests